--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,27 +28,30 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   auto_route: ^3.0.4
-  bloc: ^7.2.1
-  code_id_flutter: ^0.0.6
+  bloc: ^8.0.1
+  code_id_flutter: ^0.0.7-dev.7
   cupertino_icons: ^1.0.2
   fast_immutable_collections: ^7.0.3
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.3.3
+  flutter_bloc: ^8.0.0
   flutter_hooks: ^0.18.0
-  freezed_annotation: ^0.15.0
+  fpdart: ^0.0.12
+  freezed_annotation: ^1.0.0
   get_it: ^7.2.0
   injectable: ^1.5.0
   json_annotation: ^4.3.0
+  salomon_bottom_bar: ^3.1.0
 
 dev_dependencies:
   auto_route_generator: ^3.0.1
-  bloc_test: ^8.5.0
+  bloc_test: ^9.0.1
   build_runner: ^2.1.5
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^0.15.1+1
+  freezed: ^1.0.0
+  injectable_generator: ^1.5.2
   json_serializable: ^6.0.1
   mocktail: ^0.2.0
 
