--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,19 +29,22 @@ environment:
 dependencies:
   auto_route: ^3.0.4
   bloc: ^8.0.1
-  code_id_flutter: ^0.0.7-dev.7
+  code_id_flutter: ^0.0.8
   cupertino_icons: ^1.0.2
   fast_immutable_collections: ^7.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
   flutter_hooks: ^0.18.0
+  flutter_localizations:
+    sdk: flutter
   fpdart: ^0.0.12
   freezed_annotation: ^1.0.0
   get_it: ^7.2.0
   injectable: ^1.5.0
-  json_annotation: ^4.3.0
+  json_annotation: ^4.4.0
   salomon_bottom_bar: ^3.1.0
+
 
 dev_dependencies:
   auto_route_generator: ^3.0.1
@@ -50,9 +53,9 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^1.0.0
+  freezed: ^1.0.2
   injectable_generator: ^1.5.2
-  json_serializable: ^6.0.1
+  json_serializable: ^6.1.1
   mocktail: ^0.2.0
 
 # For information on the generic Dart part of this file, see the
@@ -91,3 +94,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_intl:
+  enabled: true
+  class_name: I10n
+  arb_dir: lib/presentation/core/i10n
+  output_dir: lib/presentation/core/i10n
