--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  auto_route: ^3.0.4
+  auto_route: ^3.2.0
   bloc: ^8.0.1
-  code_id_flutter: ^0.0.8
+  code_id_flutter: ^0.1.0
+  code_id_network: ^0.0.2
+  code_id_storage: ^0.0.2
   cupertino_icons: ^1.0.2
   fast_immutable_collections: ^7.0.3
   flutter:
@@ -43,19 +45,18 @@ dependencies:
   get_it: ^7.2.0
   injectable: ^1.5.0
   json_annotation: ^4.4.0
-  salomon_bottom_bar: ^3.1.0
-
+  salomon_bottom_bar: ^3.2.0
 
 dev_dependencies:
-  auto_route_generator: ^3.0.1
+  auto_route_generator: ^3.2.0
   bloc_test: ^9.0.1
-  build_runner: ^2.1.5
+  build_runner: ^2.1.7
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^1.0.2
+  freezed: ^1.1.0
   injectable_generator: ^1.5.2
-  json_serializable: ^6.1.1
+  json_serializable: ^6.1.3
   mocktail: ^0.2.0
 
 # For information on the generic Dart part of this file, see the
