--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,36 +27,37 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  auto_route: ^3.2.0
-  bloc: ^8.0.1
-  code_id_flutter: ^0.1.0
+  auto_route: ^3.2.1
+  bloc: ^8.0.2
+  code_id_flutter: ^0.1.1
   code_id_network: ^0.0.2
   code_id_storage: ^0.0.2
   cupertino_icons: ^1.0.2
-  fast_immutable_collections: ^7.0.3
+  dio: ^4.0.4
+  fast_immutable_collections: ^7.1.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.0
-  flutter_hooks: ^0.18.0
+  flutter_bloc: ^8.0.1
+  flutter_hooks: ^0.18.2
   flutter_localizations:
     sdk: flutter
   fpdart: ^0.0.12
   freezed_annotation: ^1.0.0
   get_it: ^7.2.0
-  injectable: ^1.5.0
+  injectable: ^1.5.3
   json_annotation: ^4.4.0
   salomon_bottom_bar: ^3.2.0
 
 dev_dependencies:
-  auto_route_generator: ^3.2.0
-  bloc_test: ^9.0.1
+  auto_route_generator: ^3.2.1
+  bloc_test: ^9.0.2
   build_runner: ^2.1.7
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
   freezed: ^1.1.0
   injectable_generator: ^1.5.2
-  json_serializable: ^6.1.3
+  json_serializable: ^6.1.4
   mocktail: ^0.2.0
 
 # For information on the generic Dart part of this file, see the
